# rust-blossom-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  index.html  justfile
.sqlx/: query-2fe67ab627a6b890ac9016aa46f5518be2bb9a0a1755953abd9c32ab92013e46.json  query-3e5e60e20e14eac6d4c10461eb13a72767c6ce9700f3f36126d998af938e4f2b.json  query-5a7f8b772149ba5f4961add10fceb88f77351be66ee97c185d6f71103ab17751.json  query-7791f50c99c37a31bcccfbd1355730b1e3060bd7efb53da9a53959d6901a1e6f.json  query-8997c18d3a61e7aa3e9c7e87131c7c11892f1b12536a694e50d8ada52b725eb2.json  query-94b1c6d4292ba37480f32c8751eb4af09f7118152e0a650d6f1c6958cfdc8c92.json  query-a953aa46392f36614d99bf079afbf667e0de7bb0ac5c13640998f4c0395af25f.json  query-af08a7e8f34f9f6eb1db0b73c15cffc8c87a3dc17d041f04f018b30c787c0299.json  query-b313eaba2583ad4c0f197b7c64f71b6291656fbb3ca4d6c5b0b00cd47762e063.json
config/: config.example.yml
migrations/: 20240422173940_create_blobs_table.sql
src/: config.rs  lib.rs  main.rs  mime_type.rs  telemetry.rs
src/api/: delete.rs  get.rs  has.rs  index.rs  list.rs  mod.rs  models.rs  upload.rs
src/api/middleware/: extract_payload_size.rs  mod.rs  nostr_auth.rs  pubkey_whitelist.rs  verify_body_size.rs  verify_delete.rs  verify_upload.rs
src/blossom/: action.rs  auth.rs  blossom.rs  mod.rs
src/telemetry/: mod.rs  stdout.rs  telemetry.rs  uptrace.rs
