[package]
name = "rust-blossom-server"
version = "0.0.1"
edition = "2021"

[dependencies]
nostr = "0.30.0"
nostr-sdk = "0.30"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.10"
tonic = { version = "0.11", features = ["tls"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
reqwest = { version = "0.12", features = ["json"] }
config = "0.14"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-log = { version = "0.2.0" }
tracing-actix-web = "0.7"
opentelemetry = { version = "0.22", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic", "metrics", "tls", "tls-roots"] }
dotenvy = "0.15.7"
thiserror = "1.0.59"
anyhow = "1.0.82"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "sqlite", "chrono", "migrate"] }


[dev-dependencies]
claims = "0.7"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
linkify = "0.9"
wiremock = "0.5"
serde_json = "1.0.61"
